# expenses_tracker

./: .gitignore  LICENSE
exptr_api/: .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose-dev.yaml  go.mod  go.sum
exptr_api_p/: CMakeLists.txt  README.md  database.ini  pyproject.toml
exptr_api_p/api/: main.py
exptr_api_p/api/config/: config.py
exptr_api_p/api/services/: db.py
exptr_api_p/exptr_api/: exptr_api.py
exptr_api_p/exptr_api/config/: config.py
exptr_api_p/exptr_api/core/: config.py  db.py
exptr_api_p/exptr_api/entities/: categories.py  db.py  operations.py  response.py  users.py
exptr_api_p/exptr_api/repositories/: categories.py  operations.py  users.py
exptr_api_p/exptr_api/repositories/database/: categories.py  operations.py  users.py
exptr_api_p/exptr_api/services/: categories.py  operations.py  users.py
exptr_api_p/exptr_api/views/: main.py
exptr_api_p/exptr_api_p/: exptr_api_p.py
exptr_api_p/exptr_api_p/core/: db.py
exptr_api_p/exptr_api_p/entities/: categories.py  operations.py  users.py
exptr_api_p/exptr_api_p/repositories/: categories.py  operations.py  users.py
exptr_api_p/exptr_api_p/repositories/database/: categories.py  operations.py  users.py
exptr_api_p/exptr_api_p/services/: categories.py  operations.py  users.py
exptr_api_p/exptr_api_p/views/: categories.py  main.py  operations.py  users.py
exptr_front/: README.md  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
exptr_frontend/: next.config.ts  package.json  pnpm-lock.yaml
exptr_llm/: exptr_categorize.ipynb
(+164 files in other folders)
