[tool.poetry]
name = "exptr_api_p"
version = "0.1.0"
description = ""
authors = ["Alexander Gorbunov <algor.monte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
psycopg-binary = "^3.1.18"
alembic = "^1.13.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"


[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"